[gd_scene load_steps=5 format=3 uid="uid://b3tu0pli4d5m0"]

[ext_resource type="TileSet" uid="uid://csc8a81gx41m8" path="res://mats/lvls/sand&rock.tres" id="1_jxiu1"]
[ext_resource type="FontFile" uid="uid://ccnmpsivc3v7v" path="res://mats/font/Puzzle-Tale-Pixel-BG.ttf" id="1_ud8fg"]
[ext_resource type="Script" path="res://gameplay_choice.gd" id="1_um5v2"]

[sub_resource type="Theme" id="Theme_06fkj"]
default_font = ExtResource("1_ud8fg")
default_font_size = 16

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_06fkj")
script = ExtResource("1_um5v2")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_jxiu1")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65537, 1, 1, 65537, 1, 1245223, 65537, 1, 1179687, 65537, 1, 1114151, 65537, 1, 1048615, 65537, 1, 983079, 65537, 1, 917543, 65537, 1, 852007, 65537, 1, 786471, 65537, 1, 720935, 65537, 1, 655399, 65537, 1, 589863, 65537, 1, 524327, 65537, 1, 458791, 65537, 1, 393255, 65537, 1, 327719, 65537, 1, 262183, 65537, 1, 196647, 65537, 1, 131111, 65537, 1, 65575, 65537, 1, 39, 65537, 1, 1245222, 65537, 1, 1179686, 65537, 1, 1114150, 65537, 1, 1048614, 65537, 1, 983078, 65537, 1, 917542, 65537, 1, 852006, 65537, 1, 786470, 65537, 1, 720934, 65537, 1, 655398, 65537, 1, 589862, 65537, 1, 524326, 65537, 1, 458790, 65537, 1, 393254, 65537, 1, 327718, 65537, 1, 262182, 65537, 1, 196646, 65537, 1, 131110, 65537, 1, 65574, 65537, 1, 38, 65537, 1, 1245221, 65537, 1, 1179685, 65537, 1, 1114149, 65537, 1, 1048613, 65537, 1, 983077, 65537, 1, 917541, 65537, 1, 852005, 65537, 1, 786469, 65537, 1, 720933, 65537, 1, 655397, 65537, 1, 589861, 65537, 1, 524325, 65537, 1, 458789, 65537, 1, 393253, 65537, 1, 327717, 65537, 1, 262181, 65537, 1, 196645, 65537, 1, 131109, 65537, 1, 65573, 65537, 1, 37, 65537, 1, 1245220, 65537, 1, 1179684, 65537, 1, 1114148, 65537, 1, 1048612, 65537, 1, 983076, 65537, 1, 917540, 65537, 1, 852004, 65537, 1, 786468, 65537, 1, 720932, 65537, 1, 655396, 65537, 1, 589860, 65537, 1, 524324, 65537, 1, 458788, 65537, 1, 393252, 65537, 1, 327716, 65537, 1, 262180, 65537, 1, 196644, 65537, 1, 131108, 65537, 1, 65572, 65537, 1, 36, 65537, 1, 1245219, 65537, 1, 1179683, 65537, 1, 1114147, 65537, 1, 1048611, 65537, 1, 983075, 65537, 1, 917539, 65537, 1, 852003, 65537, 1, 786467, 65537, 1, 720931, 65537, 1, 655395, 65537, 1, 589859, 65537, 1, 524323, 65537, 1, 458787, 65537, 1, 393251, 65537, 1, 327715, 65537, 1, 262179, 65537, 1, 196643, 65537, 1, 131107, 65537, 1, 65571, 65537, 1, 35, 65537, 1, 1245218, 65537, 1, 1179682, 65537, 1, 1114146, 65537, 1, 1048610, 65537, 1, 983074, 65537, 1, 917538, 65537, 1, 852002, 65537, 1, 786466, 65537, 1, 720930, 65537, 1, 655394, 65537, 1, 589858, 65537, 1, 524322, 65537, 1, 458786, 65537, 1, 393250, 65537, 1, 327714, 65537, 1, 262178, 65537, 1, 196642, 65537, 1, 131106, 65537, 1, 65570, 65537, 1, 34, 65537, 1, 1245217, 65537, 1, 1179681, 65537, 1, 1114145, 65537, 1, 1048609, 65537, 1, 983073, 65537, 1, 917537, 65537, 1, 852001, 65537, 1, 786465, 65537, 1, 720929, 65537, 1, 655393, 65537, 1, 589857, 65537, 1, 524321, 65537, 1, 458785, 65537, 1, 393249, 65537, 1, 327713, 65537, 1, 262177, 65537, 1, 196641, 65537, 1, 131105, 65537, 1, 65569, 65537, 1, 33, 65537, 1, 1245216, 65537, 1, 1179680, 65537, 1, 1114144, 65537, 1, 1048608, 65537, 1, 983072, 65537, 1, 917536, 65537, 1, 852000, 65537, 1, 786464, 65537, 1, 720928, 65537, 1, 655392, 65537, 1, 589856, 65537, 1, 524320, 65537, 1, 458784, 65537, 1, 393248, 65537, 1, 327712, 65537, 1, 262176, 65537, 1, 196640, 65537, 1, 131104, 65537, 1, 65568, 65537, 1, 32, 65537, 1, 1245215, 65537, 1, 1179679, 65537, 1, 1114143, 65537, 1, 1048607, 65537, 1, 983071, 65537, 1, 917535, 65537, 1, 851999, 65537, 1, 786463, 65537, 1, 720927, 65537, 1, 655391, 65537, 1, 589855, 65537, 1, 524319, 65537, 1, 458783, 65537, 1, 393247, 65537, 1, 327711, 65537, 1, 262175, 65537, 1, 196639, 65537, 1, 131103, 65537, 1, 65567, 65537, 1, 31, 65537, 1, 1245214, 65537, 1, 1179678, 65537, 1, 1114142, 65537, 1, 1048606, 65537, 1, 983070, 65537, 1, 917534, 65537, 1, 851998, 65537, 1, 786462, 65537, 1, 720926, 65537, 1, 655390, 65537, 1, 589854, 65537, 1, 524318, 65537, 1, 458782, 65537, 1, 393246, 65537, 1, 327710, 65537, 1, 262174, 65537, 1, 196638, 65537, 1, 131102, 65537, 1, 65566, 65537, 1, 30, 65537, 1, 1245213, 65537, 1, 1179677, 65537, 1, 1114141, 65537, 1, 1048605, 65537, 1, 983069, 65537, 1, 917533, 65537, 1, 851997, 65537, 1, 786461, 65537, 1, 720925, 65537, 1, 655389, 65537, 1, 589853, 65537, 1, 524317, 65537, 1, 131101, 65537, 1, 65565, 65537, 1, 29, 65537, 1, 1245212, 65537, 1, 1179676, 65537, 1, 1114140, 65537, 1, 1048604, 65537, 1, 983068, 65537, 1, 917532, 65537, 1, 851996, 65537, 1, 786460, 65537, 1, 720924, 65537, 1, 655388, 65537, 1, 589852, 65537, 1, 524316, 65537, 1, 131100, 65537, 1, 65564, 65537, 1, 28, 65537, 1, 1245211, 65537, 1, 1179675, 65537, 1, 1114139, 65537, 1, 1048603, 65537, 1, 983067, 65537, 1, 917531, 65537, 1, 851995, 65537, 1, 786459, 65537, 1, 720923, 65537, 1, 655387, 65537, 1, 589851, 65537, 1, 524315, 65537, 1, 131099, 65537, 1, 65563, 65537, 1, 27, 65537, 1, 1245210, 65537, 1, 1179674, 65537, 1, 1114138, 65537, 1, 1048602, 65537, 1, 983066, 65537, 1, 917530, 65537, 1, 851994, 65537, 1, 786458, 65537, 1, 720922, 65537, 1, 655386, 65537, 1, 589850, 65537, 1, 524314, 65537, 1, 131098, 65537, 1, 65562, 65537, 1, 26, 65537, 1, 1245209, 65537, 1, 1179673, 65537, 1, 1114137, 65537, 1, 1048601, 65537, 1, 983065, 65537, 1, 917529, 65537, 1, 851993, 65537, 1, 786457, 65537, 1, 720921, 65537, 1, 655385, 65537, 1, 589849, 65537, 1, 524313, 65537, 1, 131097, 65537, 1, 65561, 65537, 1, 25, 65537, 1, 1245208, 65537, 1, 1179672, 65537, 1, 1114136, 65537, 1, 1048600, 65537, 1, 983064, 65537, 1, 917528, 65537, 1, 851992, 65537, 1, 786456, 65537, 1, 720920, 65537, 1, 655384, 65537, 1, 589848, 65537, 1, 524312, 65537, 1, 131096, 65537, 1, 65560, 65537, 1, 24, 65537, 1, 1245207, 65537, 1, 1179671, 65537, 1, 1114135, 65537, 1, 1048599, 65537, 1, 983063, 65537, 1, 917527, 65537, 1, 851991, 65537, 1, 786455, 65537, 1, 720919, 65537, 1, 655383, 65537, 1, 589847, 65537, 1, 524311, 65537, 1, 458775, 65537, 1, 393239, 65537, 1, 327703, 65537, 1, 262167, 65537, 1, 196631, 65537, 1, 131095, 65537, 1, 65559, 65537, 1, 23, 65537, 1, 1245206, 65537, 1, 1179670, 65537, 1, 1114134, 65537, 1, 1048598, 65537, 1, 983062, 65537, 1, 917526, 65537, 1, 851990, 65537, 1, 786454, 65537, 1, 720918, 65537, 1, 655382, 65537, 1, 589846, 65537, 1, 524310, 65537, 1, 131094, 65537, 1, 65558, 65537, 1, 22, 65537, 1, 1245205, 65537, 1, 1179669, 65537, 1, 1114133, 65537, 1, 1048597, 65537, 1, 983061, 65537, 1, 917525, 65537, 1, 851989, 65537, 1, 786453, 65537, 1, 720917, 65537, 1, 655381, 65537, 1, 589845, 65537, 1, 524309, 65537, 1, 131093, 65537, 1, 65557, 65537, 1, 21, 65537, 1, 1245204, 65537, 1, 1179668, 65537, 1, 1114132, 65537, 1, 1048596, 65537, 1, 983060, 65537, 1, 917524, 65537, 1, 851988, 65537, 1, 786452, 65537, 1, 720916, 65537, 1, 655380, 65537, 1, 589844, 65537, 1, 524308, 65537, 1, 131092, 65537, 1, 65556, 65537, 1, 20, 65537, 1, 1245203, 65537, 1, 1179667, 65537, 1, 1114131, 65537, 1, 1048595, 65537, 1, 983059, 65537, 1, 917523, 65537, 1, 851987, 65537, 1, 786451, 65537, 1, 720915, 65537, 1, 655379, 65537, 1, 589843, 65537, 1, 524307, 65537, 1, 131091, 65537, 1, 65555, 65537, 1, 19, 65537, 1, 1245202, 65537, 1, 1179666, 65537, 1, 1114130, 65537, 1, 1048594, 65537, 1, 983058, 65537, 1, 917522, 65537, 1, 851986, 65537, 1, 786450, 65537, 1, 720914, 65537, 1, 655378, 65537, 1, 589842, 65537, 1, 524306, 65537, 1, 131090, 65537, 1, 65554, 65537, 1, 18, 65537, 1, 1245201, 65537, 1, 1179665, 65537, 1, 1114129, 65537, 1, 1048593, 65537, 1, 983057, 65537, 1, 917521, 65537, 1, 851985, 65537, 1, 786449, 65537, 1, 720913, 65537, 1, 655377, 65537, 1, 589841, 65537, 1, 524305, 65537, 1, 131089, 65537, 1, 65553, 65537, 1, 17, 65537, 1, 1245200, 65537, 1, 1179664, 65537, 1, 1114128, 65537, 1, 1048592, 65537, 1, 983056, 65537, 1, 917520, 65537, 1, 851984, 65537, 1, 786448, 65537, 1, 720912, 65537, 1, 655376, 65537, 1, 589840, 65537, 1, 524304, 65537, 1, 458768, 65537, 1, 393232, 65537, 1, 327696, 65537, 1, 262160, 65537, 1, 196624, 65537, 1, 131088, 65537, 1, 65552, 65537, 1, 16, 65537, 1, 1245199, 65537, 1, 1179663, 65537, 1, 1114127, 65537, 1, 1048591, 65537, 1, 983055, 65537, 1, 917519, 65537, 1, 851983, 65537, 1, 786447, 65537, 1, 720911, 65537, 1, 655375, 65537, 1, 589839, 65537, 1, 524303, 65537, 1, 131087, 65537, 1, 65551, 65537, 1, 15, 65537, 1, 1245198, 65537, 1, 1179662, 65537, 1, 1114126, 65537, 1, 1048590, 65537, 1, 983054, 65537, 1, 917518, 65537, 1, 851982, 65537, 1, 786446, 65537, 1, 720910, 65537, 1, 655374, 65537, 1, 589838, 65537, 1, 524302, 65537, 1, 131086, 65537, 1, 65550, 65537, 1, 14, 65537, 1, 1245197, 65537, 1, 1179661, 65537, 1, 1114125, 65537, 1, 1048589, 65537, 1, 983053, 65537, 1, 917517, 65537, 1, 851981, 65537, 1, 786445, 65537, 1, 720909, 65537, 1, 655373, 65537, 1, 589837, 65537, 1, 524301, 65537, 1, 131085, 65537, 1, 65549, 65537, 1, 13, 65537, 1, 1245196, 65537, 1, 1179660, 65537, 1, 1114124, 65537, 1, 1048588, 65537, 1, 983052, 65537, 1, 917516, 65537, 1, 851980, 65537, 1, 786444, 65537, 1, 720908, 65537, 1, 655372, 65537, 1, 589836, 65537, 1, 524300, 65537, 1, 131084, 65537, 1, 65548, 65537, 1, 12, 65537, 1, 1245195, 65537, 1, 1179659, 65537, 1, 1114123, 65537, 1, 1048587, 65537, 1, 983051, 65537, 1, 917515, 65537, 1, 851979, 65537, 1, 786443, 65537, 1, 720907, 65537, 1, 655371, 65537, 1, 589835, 65537, 1, 524299, 65537, 1, 131083, 65537, 1, 65547, 65537, 1, 11, 65537, 1, 1245194, 65537, 1, 1179658, 65537, 1, 1114122, 65537, 1, 1048586, 65537, 1, 983050, 65537, 1, 917514, 65537, 1, 851978, 65537, 1, 786442, 65537, 1, 720906, 65537, 1, 655370, 65537, 1, 589834, 65537, 1, 524298, 65537, 1, 131082, 65537, 1, 65546, 65537, 1, 10, 65537, 1, 1245193, 65537, 1, 1179657, 65537, 1, 1114121, 65537, 1, 1048585, 65537, 1, 983049, 65537, 1, 917513, 65537, 1, 851977, 65537, 1, 786441, 65537, 1, 720905, 65537, 1, 655369, 65537, 1, 589833, 65537, 1, 524297, 65537, 1, 458761, 65537, 1, 393225, 65537, 1, 327689, 65537, 1, 262153, 65537, 1, 196617, 65537, 1, 131081, 65537, 1, 65545, 65537, 1, 9, 65537, 1, 1245192, 65537, 1, 1179656, 65537, 1, 1114120, 65537, 1, 1048584, 65537, 1, 983048, 65537, 1, 917512, 65537, 1, 851976, 65537, 1, 786440, 65537, 1, 720904, 65537, 1, 655368, 65537, 1, 589832, 65537, 1, 524296, 65537, 1, 458760, 65537, 1, 393224, 65537, 1, 327688, 65537, 1, 262152, 65537, 1, 196616, 65537, 1, 131080, 65537, 1, 65544, 65537, 1, 8, 65537, 1, 1245191, 65537, 1, 1179655, 65537, 1, 1114119, 65537, 1, 1048583, 65537, 1, 983047, 65537, 1, 917511, 65537, 1, 851975, 65537, 1, 786439, 65537, 1, 589831, 65537, 1, 524295, 65537, 1, 458759, 65537, 1, 393223, 65537, 1, 327687, 65537, 1, 262151, 65537, 1, 196615, 65537, 1, 131079, 65537, 1, 65543, 65537, 1, 7, 65537, 1, 1245190, 65537, 1, 1179654, 65537, 1, 1114118, 65537, 1, 1048582, 65537, 1, 983046, 65537, 1, 917510, 65537, 1, 851974, 65537, 1, 786438, 65537, 1, 589830, 65537, 1, 524294, 65537, 1, 458758, 65537, 1, 393222, 65537, 1, 327686, 65537, 1, 262150, 65537, 1, 196614, 65537, 1, 131078, 65537, 1, 65542, 65537, 1, 6, 65537, 1, 1245189, 65537, 1, 1179653, 65537, 1, 1114117, 65537, 1, 1048581, 65537, 1, 983045, 65537, 1, 917509, 65537, 1, 851973, 65537, 1, 786437, 65537, 1, 589829, 65537, 1, 524293, 65537, 1, 458757, 65537, 1, 393221, 65537, 1, 327685, 65537, 1, 262149, 65537, 1, 196613, 65537, 1, 131077, 65537, 1, 65541, 65537, 1, 5, 65537, 1, 1245188, 65537, 1, 1179652, 65537, 1, 1114116, 65537, 1, 1048580, 65537, 1, 983044, 65537, 1, 917508, 65537, 1, 851972, 65537, 1, 786436, 65537, 1, 589828, 65537, 1, 524292, 65537, 1, 458756, 65537, 1, 393220, 65537, 1, 327684, 65537, 1, 262148, 65537, 1, 196612, 65537, 1, 131076, 65537, 1, 65540, 65537, 1, 4, 65537, 1, 1245187, 65537, 1, 1179651, 65537, 1, 1114115, 65537, 1, 1048579, 65537, 1, 983043, 65537, 1, 917507, 65537, 1, 851971, 65537, 1, 786435, 65537, 1, 720899, 65537, 1, 655363, 65537, 1, 589827, 65537, 1, 524291, 65537, 1, 458755, 65537, 1, 393219, 65537, 1, 327683, 65537, 1, 262147, 65537, 1, 196611, 65537, 1, 131075, 65537, 1, 65539, 65537, 1, 3, 65537, 1, 1245186, 65537, 1, 1179650, 65537, 1, 1114114, 65537, 1, 1048578, 65537, 1, 983042, 65537, 1, 917506, 65537, 1, 851970, 65537, 1, 786434, 65537, 1, 720898, 65537, 1, 655362, 65537, 1, 589826, 65537, 1, 524290, 65537, 1, 458754, 65537, 1, 393218, 65537, 1, 327682, 65537, 1, 262146, 65537, 1, 196610, 65537, 1, 131074, 65537, 1, 65538, 65537, 1, 2, 65537, 1, 1245185, 65537, 1, 1179649, 65537, 1, 1114113, 65537, 1, 1048577, 65537, 1, 983041, 65537, 1, 917505, 65537, 1, 851969, 65537, 1, 786433, 65537, 1, 720897, 65537, 1, 655361, 65537, 1, 589825, 65537, 1, 524289, 65537, 1, 458753, 65537, 1, 393217, 65537, 1, 327681, 65537, 1, 262145, 65537, 1, 196609, 65537, 1, 131073, 65537, 1, 65537, 65537, 1, 1245184, 65537, 1, 1179648, 65537, 1, 1114112, 65537, 1, 1048576, 65537, 1, 983040, 65537, 1, 917504, 65537, 1, 851968, 65537, 1, 786432, 65537, 1, 720896, 65537, 1, 655360, 65537, 1, 589824, 65537, 1, 524288, 65537, 1, 458752, 65537, 1, 393216, 65537, 1, 327680, 65537, 1, 262144, 65537, 1, 196608, 65537, 1, 131072, 65537, 1, 65536, 65537, 1, 720903, 65537, 1, 655367, 65537, 1, 720902, 65537, 1, 655366, 65537, 1, 720901, 65537, 1, 655365, 65537, 1, 720900, 65537, 1, 655364, 65537, 1, 458767, 65537, 1, 393231, 65537, 1, 327695, 65537, 1, 262159, 65537, 1, 196623, 65537, 1, 458766, 65537, 1, 393230, 65537, 1, 327694, 65537, 1, 262158, 65537, 1, 196622, 65537, 1, 458765, 65537, 1, 393229, 65537, 1, 327693, 65537, 1, 262157, 65537, 1, 196621, 65537, 1, 458764, 65537, 1, 393228, 65537, 1, 327692, 65537, 1, 262156, 65537, 1, 196620, 65537, 1, 458763, 65537, 1, 393227, 65537, 1, 327691, 65537, 1, 262155, 65537, 1, 196619, 65537, 1, 458762, 65537, 1, 393226, 65537, 1, 327690, 65537, 1, 262154, 65537, 1, 196618, 65537, 1, 458774, 65537, 1, 393238, 65537, 1, 327702, 65537, 1, 262166, 65537, 1, 196630, 65537, 1, 458773, 65537, 1, 393237, 65537, 1, 327701, 65537, 1, 262165, 65537, 1, 196629, 65537, 1, 458772, 65537, 1, 393236, 65537, 1, 327700, 65537, 1, 262164, 65537, 1, 196628, 65537, 1, 458771, 65537, 1, 393235, 65537, 1, 327699, 65537, 1, 262163, 65537, 1, 196627, 65537, 1, 458770, 65537, 1, 393234, 65537, 1, 327698, 65537, 1, 262162, 65537, 1, 196626, 65537, 1, 458769, 65537, 1, 393233, 65537, 1, 327697, 65537, 1, 262161, 65537, 1, 196625, 65537, 1, 458781, 65537, 1, 393245, 65537, 1, 327709, 65537, 1, 262173, 65537, 1, 196637, 65537, 1, 458780, 65537, 1, 393244, 65537, 1, 327708, 65537, 1, 262172, 65537, 1, 196636, 65537, 1, 458779, 65537, 1, 393243, 65537, 1, 327707, 65537, 1, 262171, 65537, 1, 196635, 65537, 1, 458778, 65537, 1, 393242, 65537, 1, 327706, 65537, 1, 262170, 65537, 1, 196634, 65537, 1, 458777, 65537, 1, 393241, 65537, 1, 327705, 65537, 1, 262169, 65537, 1, 196633, 65537, 1, 458776, 65537, 1, 393240, 65537, 1, 327704, 65537, 1, 262168, 65537, 1, 196632, 65537, 1)

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource("1_jxiu1")
format = 2
layer_0/tile_data = PackedInt32Array(1245204, 131072, 1, 1179668, 131072, 1, 1114132, 131072, 1, 1245203, 0, 1, 1179667, 0, 1, 1114131, 0, 1, 524301, 131072, 1, 1048596, 131072, 1, 1048595, 0, 1, 524300, 0, 1, 589837, 327680, 2, 655373, 393216, 1, 655372, 0, 2, 589836, 0, 1, 720909, 0, 2, 524307, 0, 1, 589843, 0, 1, 655379, 393216, 2, 786451, 65536, 1, 851987, 65536, 1, 917523, 393216, 1, 983059, 0, 1, 983060, 131072, 1, 917524, 327680, 1, 851988, 65536, 1, 786452, 65536, 1, 655380, 327680, 2, 589844, 131072, 1, 524308, 131072, 1, 1310740, 131072, 2, 1310739, 0, 2, 458765, 131072, 0, 458764, 0, 0, 458772, 131072, 0, 458771, 0, 0, 458779, 131072, 0, 458778, 0, 0, 655387, 131072, 2, 589851, 131072, 1, 524315, 131072, 1, 720922, 131072, 2, 655386, 327680, 1, 589850, 393216, 2, 524314, 0, 1, 786457, 131072, 2, 720921, 327680, 1, 786456, 65536, 2, 720920, 393216, 2, 786455, 65536, 2, 720919, 65536, 0, 786454, 327680, 1, 720918, 65536, 0, 786453, 65536, 1, 720917, 327680, 2, 786450, 65536, 1, 720914, 393216, 2, 786449, 393216, 1, 720913, 65536, 0, 786448, 65536, 2, 720912, 65536, 0, 786447, 65536, 2, 720911, 327680, 2, 786446, 0, 2, 720910, 393216, 1, 655385, 393216, 2, 655374, 327680, 2, 655384, 0, 0, 589849, 0, 0, 589838, 131072, 0, 655375, 131072, 0, 851986, 393216, 1, 851989, 327680, 1, 917522, 0, 2, 851985, 0, 2, 917525, 131072, 2, 851990, 131072, 2, 720915, 65536, 1, 720916, 65536, 1, 655381, 131072, 0, 655378, 0, 0, 1245192, 131072, 1, 1245191, 0, 1, 1179655, 0, 1, 1179656, 131072, 1, 1114119, 393216, 1, 1114120, 131072, 1, 1048584, 131072, 0, 1048583, 327680, 2, 983047, 131072, 1, 917511, 131072, 0, 851974, 131072, 0, 851973, 65536, 0, 851972, 327680, 2, 851971, 393216, 1, 851970, 65536, 2, 851969, 65536, 2, 851968, 65536, 2, 786432, 65536, 0, 786433, 65536, 0, 786434, 65536, 0, 786435, 65536, 0, 786436, 131072, 0, 917510, 327680, 2, 917509, 393216, 1, 983045, 0, 2, 983046, 393216, 1, 917508, 65536, 2, 1048582, 0, 1, 1114118, 0, 2, 917507, 0, 2, 851967, 0, 0, 917503, 0, 2, 1310727, 0, 2, 1310728, 131072, 2)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -112.0
offset_right = 160.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CLASSIC"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BOSSRUSH"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "INF"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -31.0
offset_right = 25.0
grow_horizontal = 2
grow_vertical = 0
text = "BACK"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -132.0
offset_right = 43.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
text = "TRAINING"

[connection signal="button_down" from="HBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="HBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="HBoxContainer/Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_back_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_training_button_down"]
